--- a/micrositio/index.html
+++ b/micrositio/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <ul class="flex ">
+          <ul class="flex flex-col">
     	            <li>
     	                <a href="#reseña">Libro</a>
     	            </li>
