dropcap fix, bio width fix

--- a/micrositio/index2.html
+++ b/micrositio/index2.html
@@ -130,7 +130,7 @@
                 </div>
             </section>
             <section id="bio" class="flex flex-col-reverse md:flex-row items-center justify-evenly md:p-32 md:pb-0">
-                <div class="w-2/3 md:ml-16 leading-relaxed">
+                <div class="md:w-2/3 md:ml-16 leading-relaxed">
                     <span class="nombre primer_nombre">Marcelo Javier </span><strong
                         class="nombre apellido">Arecco</strong>
                     <p class="mb-8 md:mr-32 md:mb-0">
