--- a/micrositio/compra_exitosa.html
+++ b/micrositio/compra_exitosa.html
@@ -13,26 +13,9 @@
 
 <body class="w-full p-8 md:p-0 text-lg">
     <div id="hero-desktop" class=" items-center hidden md:flex relative">
-        <div id="navbar" class="justify-center md:justify-between hidden md:block">
-            <a href="#hero"><span class="logo">ImaginAcción</span></a>
-            <ul class="hidden md:flex">
-                <li>
-                    <a href="#reseña">Libro</a>
-                </li>
-                <li>
-                    <a href="#bio">Bio</a>
-                </li>
-                <li>
-                    <a href="#beneficios">Beneficios</a>
-                </li>
-            </ul>
-
-        </div>
         <!-- Contenedor de animacion de texto -->
         <img src="images/BURGER.png" alt="burguer" class="absolute" style="top:20px; right: 20px; height: 30px;"
             onclick="openNav()">
-
-
     </div>
     <div id="mySidenav" class="sidenav pt-20">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -57,14 +40,15 @@
 
         <section id="reseña"
             class="reseña flex flex-col md:row-reverse items-start justify-between md:p-32 md:pb-0 h-full">
-            <div class="button-qr-container flex flex-row items-end">
+            <div class="button-qr-container flex flex-row items-end w-full">
                 <button type="submit" onclick="window.open('Imaginaccion.pdf')"
                     class="block md:hidden bg-red-600 py-8 w-full px-8 text-white mt-64 rounded-lg shadow-lg">Descargar
                     Imaginacción</button>
-                    
-                <a href="Imaginacción.pdf" class="hidden md:block"><img src="images/descarga.png" alt="libro imaginaccion"
-                        class="download-link self-start" /></a>
-                        <p class="hidden md:block md:mb-2 text-red-700">Escanea el codigo QR para descargar el libro en tu telefono. <br>Si tu descarga no comienza, puedes hacer click <a href="Imaginaccion.pdg">Aqui</a></p>
+
+                <a href="Imaginacción.pdf" class="hidden md:block"><img src="images/descarga.png"
+                        alt="libro imaginaccion" class="download-link self-start" /></a>
+                <p class="hidden md:block md:mb-2 text-red-700">Escanea el codigo QR para descargar el libro en tu
+                    telefono. <br>Si tu descarga no comienza, puedes hacer click <a href="./Imaginaccion.pdf" class="hidden md:block font-bold text-blue-500 underline" target="blank">Aqui</a></p>
             </div>
             <div class="w-full mt-8 md:mt-0 md:w-1/2 ml-0 leading-relaxed">
                 <p class="text-2xl">
