listo para prueba de compra

--- a/micrositio/compra_en_proceso.html
+++ b/micrositio/compra_en_proceso.html
@@ -38,34 +38,21 @@
     </div>
     <main id="main" class="h-screen flex flex-col justify-between">
 
-        <section id="reseña"
+        <section id="compra en proceso"
             class="reseña flex flex-col md:row-reverse items-start justify-between md:p-32 md:pb-0 h-full">
-            <div class="button-qr-container flex flex-row items-end w-full">
-                <button type="submit" onclick="window.open('Imaginaccion.pdf')"
-                    class="block md:hidden bg-red-600 py-8 w-full px-8 text-white mt-64 rounded-lg shadow-lg">Descargar
-                    Imaginacción</button>
-
-                <a href="Imaginacción.pdf" class="hidden md:block"><img src="images/descarga.png"
-                        alt="libro imaginaccion" class="download-link self-start" /></a>
-                <p class="hidden md:block md:mb-2 text-red-700">Escanea el codigo QR para descargar el libro en tu
-                    telefono. <br>Si tu descarga no comienza, puedes hacer click <a href="./Imaginaccion.pdf" class="hidden md:block font-bold text-blue-500 underline" target="blank">Aqui</a></p>
-            </div>
-            <div class="w-full mt-8 md:mt-0 md:w-1/2 ml-0 leading-relaxed">
-                <p class="text-2xl">
-                    Muchas gracias por comprar el libro!
-                    Espero que te sea de mucha ayuda y crecimiento.
-                </p>
-
-            </div>
-        </section> <!-- <img class="header-title-image w-full" src="images/dos-ojos.png" alt="" /> -->
+            <div class="loader"><p>
+                Compra en procesos
+            </p></div>
+        </section>
             <footer class="flex flex-row-reverse md:flex-row justify-between items-center h-8 text-sm w-full">
                 <a href="http://www.ross.com.ar" class="ml-4">
                     <h3> ROSS | Outside the Box</h3>
                 </a>
-                <img src="images/logoOwnership1.png" class="w-24" alt="logo ownership" />
+                <img src="images/logoOwnership1.png" class="w-24" alt="" />
                 <div class="hidden md:block">2020</div>
             </footer>
 
+            <!-- <img class="header-title-image w-full" src="images/dos-ojos.png" alt="" /> -->
     </main>
     <script type="text/javascript">
         (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
