--- a/micrositio/index.html
+++ b/micrositio/index.html
@@ -98,8 +98,11 @@
                 <div class="book-container w-1/3 flex flex-col items-center" id="book-container ">
                     <img src="images/mockup Libro Arecco posta (1).png" alt="libro imaginaccion" class="libro" />
                     <a mp-mode="dftl"
-                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=544307286-5d98cc75-c4ed-4497-9240-5d6add41b832"
-                        name="MP-payButton" class='red-ar-m-rn-none'> Comprar </a>
+                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=544307286-ea4c39e1-3349-4c85-94c5-1783fe84467c"
+                        name="MP-payButton" class='red-ar-l-rn-arall'>Comprar eBook</a>
+                    <script type="text/javascript">
+                        (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
+                    </script>
 
                 </div>
                 <div class="w-full mt-8 md:mt-0 md:w-1/3 ml-0 md:ml-16 leading-relaxed">
@@ -146,10 +149,13 @@
                 <img src="images/retrato-arecco.jpg" alt="retrato arecco" class="mt-8 md:mt-0 w-64">
             </section>
             <section id="beneficios" class="flex flex-col-reverse md:flex-row items-center justify-evenly p-4 md:p-32">
-                <div>
+                <div class="md:w-1/3">
                     <a mp-mode="dftl"
-                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=544307286-5d98cc75-c4ed-4497-9240-5d6add41b832"
-                        name="MP-payButton" class='red-ar-l-rn-arall'>Comprar</a>
+                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=544307286-ea4c39e1-3349-4c85-94c5-1783fe84467c"
+                        name="MP-payButton" class='red-ar-l-rn-arall'>Comprar eBook</a>
+                    <script type="text/javascript">
+                        (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
+                    </script>
 
                 </div>
                 <div>
@@ -157,7 +163,8 @@
                             class="rojo">Imaginacción:</span></span>
                     <ul class="mt-8 ml-16 leading-relaxed list-disc mb-8 md:mb-0">
                         <li>
-                            Te anotas a la lista de difusión de novedades de Marcelo Arecco. <br> Crearemos una comunidad para estar informados.
+                            Te anotas a la lista de difusión de novedades de Marcelo Arecco. <br> Crearemos una
+                            comunidad para estar informados.
                         </li>
                         <li>
                             Tendrás acceso a los artículos de difusión y novedades del proceso de cambio.
@@ -166,13 +173,15 @@
                             Participas de descuentos para ingreso a sus eventos/seminarios.
                         </li>
                         <li>
-                            El libro esta dispuesto en dos partes una que representa el marco teórico y otra la parte practica o guía, completando la guía tendrás acceso gratuito a la reunión con el monitor cliqueando aquí. 
+                            El libro esta dispuesto en dos partes una que representa el marco teórico y otra la parte
+                            practica o guía, completando la guía tendrás acceso gratuito a la reunión con el monitor
+                            cliqueando aquí.
                         </li>
                         <li>
                             Marcelo te seguirá en redes Sociales
                         </li>
                         <li>
-                            Seras parte de la plataforma de formación de OWNERSHIP 
+                            Seras parte de la plataforma de formación de OWNERSHIP
                         </li>
                         <li>
                             Prodras conocer la nueva APP sobre el nuevo modelo de gestión del Talento humano.
@@ -191,7 +200,7 @@
             <a href="http://www.ross.com.ar" class="ml-4">
                 <h3> ROSS | Outside the Box</h3>
             </a>
-            <img src="images/logoOwnership1.png" alt="" />
+            <img src="images/logoOwnership1.png" class="w-24" alt="" />
             <div class="hidden md:block">2020</div>
         </footer>
 
