--- a/micrositio/compra_exitosa.html
+++ b/micrositio/compra_exitosa.html
@@ -33,7 +33,7 @@
     </div>
     <div id="mobile-header" class="fixed -ml-8 w-full md:hidden top-0 bg-white p-4 shadow-md z-10">
         <a href="#hero"><span class="logo">ImaginAcción</span></a>
-        <img src="images/BURGER.png" alt="burguer" class="absolute " style="top:.9em; right: 1em; height: 30px;"
+        <img src="images/qr.svg" alt="burguer" class="absolute " style="top:.9em; right: 1em; height: 30px;"
             onclick="openNav()">
     </div>
     <main id="main" class="h-screen flex flex-col justify-between">
@@ -41,14 +41,14 @@
         <section id="reseña"
             class="reseña flex flex-col md:row-reverse items-start justify-between md:p-32 md:pb-0 h-full">
             <div class="button-qr-container flex flex-row items-end w-full">
-                <button type="submit" onclick="window.open('Imaginaccion.pdf')"
+                <button type="submit" onclick="window.open('https://qrgo.page.link/8zivp')"
                     class="block md:hidden bg-red-600 py-8 w-full px-8 text-white mt-64 rounded-lg shadow-lg">Descargar
                     Imaginacción</button>
 
-                <a href="Imaginacción.pdf" class="hidden md:block"><img src="images/descarga.png"
+                <a href="https://qrgo.page.link/8zivp" class="hidden md:block"><img src="images/descarga.png"
                         alt="libro imaginaccion" class="download-link self-start" /></a>
                 <p class="hidden md:block md:mb-2 text-red-700">Escanea el codigo QR para descargar el libro en tu
-                    telefono. <br>Si tu descarga no comienza, puedes hacer click <a href="./Imaginaccion.pdf" class="hidden md:block font-bold text-blue-500 underline" target="blank">Aqui</a></p>
+                    telefono. <br>Si tu descarga no comienza, puedes hacer click <a href="https://qrgo.page.link/8zivp" class="hidden md:block font-bold text-blue-500 underline" target="blank">Aqui</a></p>
             </div>
             <div class="w-full mt-8 md:mt-0 md:w-1/2 ml-0 leading-relaxed">
                 <p class="text-2xl">
