--- a/micrositio/index.html
+++ b/micrositio/index.html
@@ -97,11 +97,9 @@
                 class="reseña flex flex-col-reverse md:flex-row md:row-reverse items-center justify-evenly md:p-32 md:pb-0">
                 <div class="book-container w-1/3 flex flex-col items-center" id="book-container ">
                     <img src="images/mockup Libro Arecco posta (1).png" alt="libro imaginaccion" class="libro" />
-                    <a mp-mode="dftl"
-                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=544307286-ea4c39e1-3349-4c85-94c5-1783fe84467c"
-                        name="MP-payButton" class='red-ar-l-rn-arall'>Comprar eBook</a>
+                    <a mp-mode="dftl" href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=18540932-02546b72-fdd3-4882-9f21-abc8b62a23b8" name="MP-payButton" class='red-ar-l-rn-arall'>COMPRAR EBOOK </a>
                     <script type="text/javascript">
-                        (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
+                    (function(){function $MPC_load(){window.$MPC_loaded !== true && (function(){var s = document.createElement("script");s.type = "text/javascript";s.async = true;s.src = document.location.protocol+"//secure.mlstatic.com/mptools/render.js";var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);window.$MPC_loaded = true;})();}window.$MPC_loaded !== true ? (window.attachEvent ?window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null;})();
                     </script>
 
                 </div>
@@ -151,8 +149,8 @@
             <section id="beneficios" class="flex flex-col-reverse md:flex-row items-center justify-evenly p-4 md:p-32">
                 <div class="md:w-1/3">
                     <a mp-mode="dftl"
-                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=544307286-ea4c39e1-3349-4c85-94c5-1783fe84467c"
-                        name="MP-payButton" class='red-ar-l-rn-arall'>Comprar eBook</a>
+                        href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=18540932-02546b72-fdd3-4882-9f21-abc8b62a23b8"
+                        name="MP-payButton" class='red-ar-l-rn-arall'>COMPRAR EBOOK </a>
                     <script type="text/javascript">
                         (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
                     </script>
