--- a/micrositio/index.html
+++ b/micrositio/index.html
@@ -27,7 +27,7 @@
         </ul>
     </div>
     <div id="mobile-header" class="fixed -ml-8 w-full md:hidden top-0 bg-white p-4 shadow-md z-10">
-        <a href="#hero"><span class="logo">ImaginAcción</span></a>
+        <a href="#hero-desktop"><span class="logo">ImaginAcción</span></a>
         <img src="images/BURGER.png" alt="burguer" class="absolute " style="top:.9em; right: 1em; height: 30px;"
             onclick="openNav()">
     </div>
